--- a/scss/style.scss
+++ b/scss/style.scss
@@ -83,16 +83,14 @@ body {
 					list-style: none;
 					background: #ccc;
 					color: #111;
-
-					border-radius: 5px;
-					margin: 0.25em 0;
-					box-shadow: 0px 5px 10px rgba(#000, 0.5);
+					border-bottom: 1px solid #888;
 
 					opacity: 0;
 					visibility: hidden;
 					transition: 0.5s;
 
 					&:hover {
+						cursor: pointer;
 						background-color: #888;
 					}
 				}
