--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,11 +16,16 @@
 		</section>
 		<section class="user-other">
 			<header class='site-sidebar-title'>Online people</header>
+			<div id="people-online">
+				
+			</div>
 		</section>
 		<section class="site-sidebar-setting">
 			<div class="setting-panel">
 				<div class="setting-icon"></div>
-				<div class="setting-items">test 1</div>
+				<div class="setting-items">
+					<a href="/logout" class="setting-link">LOGOUT</a>
+				</div>
 				<div class="setting-items">test 2</div>
 				<div class="setting-items">test 3</div>	
 			</div>
