--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,59 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<%- include("includes/meta", {title: 'MY CHAT APP'}) %>
+	<title>MY CHAT APP</title>
+	<%- include('includes/meta') -%>
+	<link rel="stylesheet" href="/css/slide.min.css">
+	<style>
+		.card-body {
+			position: relative;
+			padding-top: 50px;
+		}
+		.card-body .user-pic {
+			position: absolute;
+			top: 0;
+			left: 50%;
+			transform: translate(-50%, -50%);
+		}
+		.card .user-bg {
+			height: 100px;
+			overflow: hidden;
+		}
+		.card .user-bg img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+	</style>
 </head>
 <body class='site'>
-	<%- include('includes/noscript') %>
-	<aside class='site-sidebar'>
-		<section class="user-info">
-			<header class="site-sidebar-title">Your Profile</header>
-			<div class="user-info-avatar">
-				<img src="<%= user.avatar_src %>" alt="Avatar" id="sidebar-avatar">
+	<%- include('includes/header') -%>
+	<main class="container site-container">
+		<div class="container-fluid">
+			<div class="">People here</div>
+			<div class="d-flex flex-row flex-wrap justify-content-around" id="people-here">
 			</div>
-			<div class="user-info-name" id="sidebar-username"><%= user.name %></div>
-			<div class="user-info-liked" id="sidebar-liked"><%= user.liked %></div>
-		</section>
-		<section class="user-other">
-			<header class='site-sidebar-title'>Online people</header>
-			<div id="people-online">
-				
-			</div>
-		</section>
-		<section class="site-sidebar-setting">
-			<div class="setting-panel">
-				<div class="setting-icon"></div>
-				<div class="setting-items">
-					<a href="/logout" class="setting-link">LOGOUT</a>
-				</div>
-				<div class="setting-items">test 2</div>
-				<div class="setting-items">test 3</div>	
-			</div>
-		</section>
-	</aside>
-	<main class="site-container flex flex_column">
-		<div id="chat-mes" class='flex_grow'></div>
-		<div>
-			<form id='chat' class='flex flex_row'>
-				<input autocomplete=off type="text" class='flex_grow' name='mes'>
-				<input type="submit" value="Send">
-			</form>
 		</div>
 	</main>
-	<footer class="site-footer flex flex_column flex_center">
-		<div class='flex-items'>
-			<p>@2018 of <a href="https://github.com/beohoang98">NoobCoder</a></p>
-		</div>
-	</footer>
-	<script src='/js/script.js'></script>
-	<script>
-		(function($){
-
-			$('.setting-icon').click(function() {
-				$(this).parent().toggleClass('open');
-			});
-
-		})(jQuery);
-	</script>
+	<script src="/js/home.js"></script>
 </body>
 </html>
