--- a/views/includes/meta.ejs
+++ b/views/includes/meta.ejs
@@ -1,10 +1,20 @@
+<!-- meta -->
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title><% title %></title>
+<link rel="shortcut icon" href="/images/favicon.png" type="image/png">
 
-<link href="https://fonts.googleapis.com/css?family=Lora|Ubuntu" rel="stylesheet">
-<link rel="stylesheet" type='text/css' href="/css/style.min.css">
+<!-- js library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="/lib/socket.io/socket.io.js"></script>
 
-<script src="/jquery/jquery.min.js"></script>
-<script src="/socketio/socket.io.js"></script>
+<!-- bootstrap cho giao dien-->
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+
+<!-- font-awesome cho icon -->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+
+<!-- own style -->
+<link rel="stylesheet" href="/css/site.min.css">
+<link rel="stylesheet" href="/css/alluser.min.css">
