--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,120 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<%- include("includes/meta", {title: 'LOGIN | MY CHAT APP'}) %>
-	<style>
-		main {
-			height: 100vh;
-		}
-		form {
-			width: 300px;
-			padding: 1em;
-			background-color: #333;
-			color: #ccc;
-			border-radius: 5px;
-		}
-		form a {
-			color: #fff;
-		}
-		.form-group {
-			margin: 1em;
-		}
-		.text-input {
-			padding: 1rem;
-			font-size: 1.25rem;
-			width: 230px;
-
-			border: 3px solid transparent;
-			border-radius: 5px;
-			outline: none;
-
-			transition: 0.2s;
-		}
-		.text-input:focus {
-			border-color: #0045f0;
-		}
-		input[type=submit] {
-			border: none;
-			outline: none;
-			width: 200px;
-
-			padding: 1rem;
-			margin: 1rem;
-			font-weight: bold;
-			border-radius: 5px;
-
-			transition: 0.5s;
-		}
-		input[type=submit]:hover {
-			background-color: #888;
-			cursor: pointer;
-		}
-		.fail-msg {
-			padding: 1em;
-			color: red;
-		}
-
-		.password-input {
-			position: relative;
-		}
-		.password-see {
-			position: absolute;
-			height: 100%;
-			width: 2em;
-			padding: 0 0.5em;
-			cursor: pointer;
-			top: 0;
-			right: 0;
-
-			background-image: url('/image/eye.png');
-			background-size: contain;
-			background-repeat: no-repeat;
-			background-position: center;
-		}
-	</style>
+	<title>LOGIN - MY CHAT APP</title>
+	<%- include('includes/meta') -%>
+	<link rel="stylesheet" href="/css/login.min.css">
 </head>
-<body>
-	<%- include('includes/noscript') %>
-	<main class="flex flex_column flex_center">
-		<form action="#" method="POST" class='flex flex_center flex_column'>
-
-			<header>
-				<h1>LOGIN</h1>
-			</header>
-
-			<div class="form-group">
-				<input class='text-input' type="text" required placeholder="Username" name="username" id="username">
-			</div>
-			<div class="form-group password-input">
-				<input class='text-input' type="password" required placeholder="Password" name="password" id="password">
-				<div for="" class="password-see"></div>
-			</div>
-
-			<div class="form-group">
-				<input type="submit" value="LOGIN">
-			</div>
-
-			<div align=center>
-				<p>Haven't account yet</p>
-				<p><a href="/signup">Signup</a> Here</p>
-			</div>
-
-		</form>
-		<div class="fail-msg">
-			<% if (err) { %>
-			<%= "Username or password is incorrect" %>
-			<% }%>
+<body class='site d-flex justify-content-center align-items-center bg-dark'>
+	<form class='form rounded text-center' action="/login" method="POST" enctype="multipart/form-data">
+		<big class='serif-font'>
+			<i class="fa fa-comments"></i>
+			MY CHAT APP
+		</big>
+		<small class='fail-msg text-danger'><%= (!!msg)?msg:"" %></small>
+		<div class='form-group'>
+			<input required class='form-control' type="text" name='username' id='username' placeholder="USERNAME">
 		</div>
-	</main>
-	<script>
-		$(document).ready(()=>{
-			$('.password-see').on('mousedown', ()=>{
-				$('#password').attr('type', 'text');
-			});
-			$('.password-see').on('mouseup', ()=>{
-				$('#password').attr('type', 'password');
-			});
-		});
-	</script>
+		<div class='form-group'>
+			<input required class='form-control' type="password" name='password' id='password' placeholder="PASSWORD">
+		</div>
+		<div class='form-group text-center'>
+			<input type="submit" class='btn btn-primary btn-lg' value="LOGIN">
+		</div>
+		<small class='text-center'>
+			Or sign up <a class='btn btn-outline-success btn-sm' href="/signup">here</a>
+		</small>
+	</form>
 </body>
 </html>
