--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -31,7 +31,7 @@
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
 					    aria-expanded="false">
-						<img src="<%= user.picture %>" alt="" class="user-pic" style='width: 1.5rem; height: 1.5rem;'>
+						<img src="<%= user.picture %>" alt="" class="user-pic" style='width: 1.5rem; height: 1.5rem; object-fit: cover'>
 						<%= user.name %>
 					</a>
 					<div class="dropdown-menu bg-dark is-collapse" aria-labelledby="navbarDropdown">
