feature update: avatar, chat images
popup err if change avatar fail

chat images can see preview larger

undefined image will sent the no-image file

--- a/public/css/scss/chat.scss
+++ b/public/css/scss/chat.scss
@@ -52,6 +52,11 @@
 			max-width: 40%;
 			object-fit: cover;
 			border-radius: 5px;
+			&:hover {
+				cursor: pointer;
+				-webkit-filter: brightness(70%);
+				filter: brightness(70%);
+			}
 		}
 	}
 }
