--- a/public/css/scss/profile.scss
+++ b/public/css/scss/profile.scss
@@ -19,6 +19,20 @@
 		width: 200px;
 		height: 200px;
 		border: 5px solid var(--dark);
+		background: #fff;
+
+		img {
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+			top: 0;
+			left: 0;
+		}
+
+		#avatar-loading {
+			background-color: rgba(#000, 0.5)
+		}
 
 		&:hover {
 			.update-avatar {
