--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -38,6 +38,17 @@
 		</div>		
 	</main>
 
+	<!-- modal preview image -->
+	<div class="modal fade" id="image-modal">
+		<div class="modal-dialog d-flex flex-column align-items-center justify-content-center">
+			<button class="btn btn-secondary border-light rounded-circle" data-dismiss="modal">
+				<i class="fa fa-times"></i>
+			</button>
+			<div class="">
+				<img style='min-width: 320px; width: 90vw;' class='container-fluid' src="" alt="">
+			</div>
+		</div>
+	</div>
 
 	<script src="/js/chat.js"></script>
 </body>
