--- a/public/css/scss/profile.scss
+++ b/public/css/scss/profile.scss
@@ -9,6 +9,34 @@
 		height: 100%;
 		background-color: var(--secondary);
 		background-size: cover;
+
+		label {
+			margin: 0;
+		}
+
+		input[type=file] {
+			width: 0;
+			height: 0;
+			visibility: hidden;
+			position: absolute;
+		}
+
+		&:hover, &.is-change {
+			.profile-change-cover {
+				opacity: 1;
+				visibility: visible;
+			}
+		}
+	}
+
+	&-change-cover {
+		position: absolute;
+		padding: 0.5em;
+		top: 0.5em;
+		right: 0.5em;
+		transition: 0.5s;
+		visibility: hidden;
+		opacity: 0;
 	}
 
 	&-avatar {
@@ -51,16 +79,6 @@
 			text-align: center;
 			color: #fff;
 			font-size: 2em;
-
-			label {
-				margin: 0;
-			}
-
-			input[type=file] {
-				width: 0;
-				height: 0;
-				visibility: hidden;
-			}
 
 			#update-avatar, #discard-avatar {
 				display: none;
