notification is working, but so dump

--- a/public/css/scss/site.scss
+++ b/public/css/scss/site.scss
@@ -70,6 +70,12 @@ body {
 	}
 }
 
+.notify-el {
+	display: flex;
+	flex-flow: row nowrap;
+	margin-top: 1em;
+}
+
 // ::-webkit-scrollbar, ::-moz-scrollbar {
 // 	width: 5px;
 // 	height: 5px;
