--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -49,6 +49,7 @@
 		</div>
 	</div>
 
-	<script src="/js/chat.js"></script>
+	<script src="/js/chat.js" type="module"></script>
+	<script src="/js/notify.js" type="module"></script>
 </body>
 </html>
