--- a/views/home.ejs
+++ b/views/home.ejs
@@ -35,6 +35,7 @@
 			</div>
 		</div>
 	</main>
-	<script src="/js/home.js"></script>
+	<script src="/js/home.js" type='module'></script>
+	<script src="/js/notify.js" type='module'></script>
 </body>
 </html>
