--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -4,6 +4,7 @@
 	<title><%= user.name %></title>
 	<%- include('includes/meta') -%>
 	<link rel="stylesheet" href="/css/profile.min.css">
+	<link rel="stylesheet" href="/css/photo.min.css">
 </head>
 <body>
 	<%- include('includes/header', {user: me}) %>
@@ -18,7 +19,7 @@
 			
 			<h1 class="text-center serif-font text-light"><%= user.name %></h1>
 			<div class="profile-avatar user-pic">
-				<img src="<%=user.picture%>" alt="" id='profile-avatar' onload="$('#avatar-loading').hide()">
+				<img src="<%=user.picture-%>?width=200&height=200" alt="" id='profile-avatar' onload="$('#avatar-loading').hide()">
 				<img src="/images/loading.gif" alt="" id="avatar-loading">
 			</div>
 		</div>
@@ -28,6 +29,18 @@
 			<% if (me.name != user.name) { %>
 			<a href="/chat/<%=user.name-%>" class='btn btn-primary'><i class="fa fa-comments"></i> CHAT</a>
 			<% } %>
+		</div>
+		<% if (me.name === user.name) { %>
+		<div class="d-flex justify-content-center p-4">
+			<button class="btn btn-primary" id="open-post-modal">
+				POST IMAGE <i class="fa fa-camera"></i>
+			</button>
+		</div>
+		<% } %>
+		<div class="post-container" id='post'>
+		</div>
+		<div class="d-flex flex-row justify-content-center">
+			<button class="btn btn-outline-secondary" id='see-more-post'>See more</button>
 		</div>
 	</main>
 
@@ -39,6 +52,7 @@
 					<div class="modal-title">Error</div>
 				</div>
 				<pre class="modal-body">
+
 				</pre>
 				<div class="modal-footer">
 					<button class="btn btn-secondary" data-dismiss='modal'>Cancel</button>
@@ -47,8 +61,43 @@
 		</div>
 	</div>
 
+	<!-- model for post status -->
+	<% if (me.name === user.name) { %>
+	<div class="modal fade" id="post-modal">
+		<div class="modal-dialog modal-dialog-centered">
+			<form class="modal-content" id='post-image'>
+				<div class="modal-header">
+					<div class="modal-title">POST IMAGE</div>
+				</div>
+				<div class="modal-body">
+					<div id="admin-control" class='d-flex flex-row justify-content-center p-4'>
+						<textarea class='form-control' id="post-text" placeholder="description"></textarea>
+						<label for="add-image" class="btn btn-primary input-file">
+							ADD <i class="fa fa-camera"></i>
+							<input class='input-file-hide' type="file" accept="image" multiple name="images" id="add-image">
+						</label>
+					</div>
+					<div class="post-image-preview" id='image-preview'>
+
+					</div>
+				</div>
+				<div class="modal-footer">
+					<a href='#' class="btn btn-secondary" data-dismiss='modal'>Cancel</a>
+					<button type='submit' class="btn btn-success">POST</button>
+				</div>
+				<div id="status-text"></div>
+				<div class='progress'>
+					<div id="status" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+				</div>
+			</form>
+		</div>
+	</div>
+	<% } %>
+
+	<script src="/js/display-photos.js" type='module'></script>
 	<% if (me.name == user.name) { %>
 	<script src="/js/profile-owner.js"></script>
+	<script src="/js/post-image.js" type='module'></script>
 	<% } %>
 </body>
 </html>
