fix api get post, add feature seeing slide of photos

--- a/public/css/scss/photo.scss
+++ b/public/css/scss/photo.scss
@@ -52,3 +52,11 @@
 		vertical-align: top;
 	}
 }
+
+#modal-carousel .modal-dialog {
+	width: 100%;
+	max-width: 100%;
+}
+#show-post-list {
+	min-height: 300px;
+}
