--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -61,6 +61,41 @@
 		</div>
 	</div>
 
+	<!-- modal for carousel slide -->
+	<div class="modal fade" id="modal-carousel">
+		<div class="modal-dialog modal-lg modal-dialog-centered">
+			<div class="modal-content">
+				<div class="modal-header p-0">
+					<div class="d-flex flex-row">
+						<div class="user-pic">
+							<img src="/<%= user.name -%>/avatar" alt="">
+						</div>
+						<div class="user-name"><%=user.name-%></div>
+					</div>
+					<div class="close m-0" data-dismiss='modal'><i class="fa fa-times"></i></div>
+				</div>
+				<div class="modal-status">
+					<h3 class="modal-title"></h3>
+					<p class="modal-text"></p>
+				</div>
+				<!-- carousel -->
+				<div id='show-post' class="carousel slide" data-ride="carousel">
+					<div class="carousel-inner" id='show-post-list'>
+					</div>
+					<a class="carousel-control-prev" href="#show-post" role="button" data-slide="prev">
+						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						<span class="sr-only">Previous</span>
+					</a>
+					<a class="carousel-control-next" href="#show-post" role="button" data-slide="next">
+						<span class="carousel-control-next-icon" aria-hidden="true"></span>
+						<span class="sr-only">Next</span>
+					</a>
+				</div>
+				<!-- end carousel -->
+			</div>
+		</div>
+	</div>
+
 	<!-- model for post status -->
 	<% if (me.name === user.name) { %>
 	<div class="modal fade" id="post-modal">
